[project]
name = "local-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=0.3.50",
    "langchain-ollama>=0.3.0",
    "langchain-tavily>=0.1.5",
    "langgraph>=0.3.24",
    "openevals>=0.0.17",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.84",
]
